<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "BlogInfo">
    <!ENTITY channel_url "marcusradisch.de">
    ]>

<resources>
    <string name="app_name" translatable="false">BlogInfo</string>
    <string name="channel_name">Marcus Radisch</string>
    <string name="channel_notification_name">Notify about new Blogpost</string>
    <string name="channel_description">marcusradisch.de</string>
    <string name="notificationTitle">new blogpost</string>
    <string name="settings_time_set">Set</string>
    <string name="settings_time_cancel">Cancel</string>
    <string name="notificationText">There are news on &channel_url;</string>
    <string name="about_the_app">about the app</string>
    <string name="thanks">thanks</string>
    <string name="image" translatable="false">image</string>
    <string name="about_title">The &appname; Project</string>
    <string name="about_info">The &appname; Project is a project created to inform my friend\'s when i published a new blogpost on &channel_url;</string>
    <string name="tv_howitworks">how &appname; works</string>
    <string name="tv_howitworksdescription">The &appname;-App checks in the morning at 07:00 o\'clock if the RSS-Feed of the website &channel_url;
        has been updated. If the web page has been updated, a notification will be displayed. By clicking on the notification the website &channel_url;
        will be visit.</string>
    <string name="thankyou">Thanks</string>
    <string name="thankyougod">Thank you Jesus that you died for me on the cross and rose again.</string>
    <string name="bibleverse">For God so loved the world that he gave his one and only Son, that whoever believes in him shall not perish but have eternal life. John 3:16</string>
    <string name="thankyou_sr">Thank you sea for your help in developing the app.</string>
    <string name="thankyou_sd">Thank you timmy for the design of the turtle logo.</string>
    <string name="tv_AppStartManual">&appname;-App can also be started manually to check the RSS-Feed from the website &channel_url;. For this, only the button on the start page must be pressed.</string>
    <string name="noUpdate">There are no updates</string>
    <string name="version">version: %1$s</string>
    <string name="ask">check RSS-Feed</string>
    <string name="my_url">My blog is located at <a href="www.marcusradisch.de">www.marcusradisch.de</a>.</string>
    <string name="objisnull">Object is null</string>
    <string name="lastFeed">Last blogpost: %1$s</string>

</resources>
