<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="258dp"
            android:layout_height="235dp"
            android:layout_margin="10dp"
            android:accessibilityHeading="false"
            android:contentDescription="@string/image"
            android:src="@drawable/timmy_turtle_logo_transparent" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"

            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tvAboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/about_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAboutInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/about_info"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="?android:attr/listDivider" />
        <TextView
            android:id="@+id/tvMyURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/my_url"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:autoLink="web"/>

        <TextView
            android:id="@+id/tvAppHowItWorksheadLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/tv_howitworks"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvAppHowItWorks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/tv_howitworksdescription"/>

        <TextView
            android:id="@+id/tvAppStartManual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/tv_AppStartManual"/>
    </LinearLayout>
</ScrollView>
