<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">



    <TextView
        android:id="@+id/tvThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/thankyou"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/thankyoujesus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/thankyougod"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/bible_verse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/bibleverse_1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/thankyousr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/thankyou_sr"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/thankyousd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/thankyou_sd"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:layout_width="206dp"
            android:layout_height="158dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/image"
            android:src="@drawable/timmy_turtle_logo_transparent" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="?android:attr/listDivider" />
    </LinearLayout>
</ScrollView>
